Issues with Permissions

--- a/Xcode/SkillDrop/SkillDrop/Info.plist
+++ b/Xcode/SkillDrop/SkillDrop/Info.plist
@@ -5,6 +5,7 @@
 	<key>NSBonjourServices</key>
 	<array>
 		<string>_skilldrop._tcp</string>
+		<string>_skilldrop._udp</string>
 	</array>
 	<key>Privacy - Nearby Interaction Usage Description
 Privacy - Nearby Interaction Usage Description
